# CSCI5611-Project3

./: .gitignore  CMakeLists.txt  README.md
include/: Common.h
include/math/: Mat.h  MathUtils.h  Vec.h
include/neural/: NeuralNet.h  NeuralNetCompileTime.h
src/: arm.cpp  path.cpp
